# Python-w-zastosowaniach-naukowych

./: .gitignore  numba006.ipynb  projekt001.py  projekt002.py  projekt003.py  projekt007.ipynb  projekt008.ipynb  projekt9.py  projekt9_z_dodatkami.py  pyproject.toml  romeo_i_julia_ang.txt  romeo_i_julia_pol.txt
