[tool.poetry]
name = "do oddania"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ascii-graph = "^1.5.1"
tqdm = "^4.64.1"
numpy = "^1.23.5"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
